share image and adding image from gallery done!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="LabelTV">Choose a Label</string>
     <string name="Labelhint">Label</string>
     <string name="AddBtnText">ADD</string>
-    <string name="no_items_try_adding_from_the_action_above">No Items...Add from Action above</string>
+    <string name="no_items_try_adding_from_the_action_above">“No items. Try adding from the action above"</string>
+    <string name="Update_and_add_from_Gallery">ADD</string>
+    <string name="share_image">Share Image</string>
 </resources>
