permission and drag action button added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="new_LabelTV">Choose a new Label</string>
     <string name="search">Search</string>
     <string name="Sort_Alphabetically">Sort</string>
+    <string name="drag_and_drop">Drag and Drop</string>
 </resources>
